# Face-Indentification

./: .gitignore  delete_data.py  docker-compose.yml  face.txt  generate_data.py  main.py  pyproject.toml  test_connection.py  test_db.py  test_search.py
config/: settings.py
core/: engine.py
data/: users_data.json
database/: postgres.py  user_repository.py
entities/: user.py
services/: anti_spoof_service.py  base.py  camera_service.py  checkin_service.py  face_service.py  identity_service.py  user_service.py  visualizer_service.py
utils/: fake_embedding.py  logger.py
